# lattice

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  DEVELOPMENT.md  Dockerfile  HOW_TO_VIEW_LOGS.md  Makefile  PROACTIVE_ISSUE.md  README.md  coverage.json  coverage_test.json  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  feedback_analysis.md  mypy.ini  pyproject.toml  test_dream_channel_integration.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: activity_tracking.md  objective_tracking_improvements.md
.github/workflows/: commitlint.yml  deploy.yml  migration-immutability.yml  pr-body-check.yml  quality-checks.yml  rollback.yml  test-deploy.yml  tests.yml
docs/: ARCHITECTURE_TIMELINE.md  DEPLOYMENT_OPTIMIZATION.md  DEVELOPMENT.md  TESTING.md  concurrency_and_consolidation.md  constraint-system-design.md  context-archetype-system.md  context_optimization_exploration.md  local-extraction-investigation.md  message-data-flow.md  revised_query_extraction_template.sql  roadmap.md
docs/archive/: concurrency_and_consolidation.md  context-archetype-system.md  initial-design.md  message-data-flow.md  roadmap-v1.md  semantic-memory-analysis.md  semantic-memory-further-analysis.md
lattice/: __init__.py  __main__.py  app.py
lattice/core/: constants.py  context.py  context_analyzer.py  context_strategy.py  entity_extraction.py  entity_resolution.py  handlers.py  health.py  local_extraction.py  memory_orchestrator.py  pipeline.py  query_extraction.py  response_generator.py  retrieval.py  types.py
lattice/discord_client/: __init__.py  audit_mirror.py  bot.py  command_handler.py  dream.py  dream_v1_backup.py  error_handlers.py  error_manager.py  error_notifier.py  message_handler.py  thread_handler.py
lattice/dreaming/: __init__.py  analyzer.py  approval.py  memory_review.py  proposer.py
lattice/memory/: __init__.py  batch_consolidation.py  canonical.py  context.py  episodic.py  feedback_detection.py  graph.py  procedural.py  prompt_audits.py  renderers.py  repositories.py  semantic.py  user_feedback.py
lattice/memory/embedding/: __init__.py  memory_module.py
lattice/scheduler/: __init__.py  adaptive.py  dreaming.py  engagement.py  nudges.py  opt_out_manager.py  recursion_guard.py  response_handler.py  runner.py  safety_filter.py  triggers.py
lattice/utils/: __init__.py  auditing_middleware.py  config.py  context.py  database.py  date_resolution.py  di_helpers.py  embeddings.py  json_parser.py  llm.py  llm_client.py  memory_parsing.py  objective_parsing.py  placeholder_injector.py  placeholder_registry.py  source_links.py  template_diff.py  triple_parsing.py
scripts/: __init__.py  check_discord_v2.py  check_migrations.sh  check_repository_pattern.py  cleanup_legacy_timezone.py  health_check_proactive.py  init_db.py  init_db.sql  migrate.py  schema.sql  seed.sql  update_test_file.py
scripts/migrations/: 001_add_schema_migrations.sql  001_core.sql  001_core_tables.sql  001_create_schema_migrations.sql  001_link_feedback_to_audit.sql  001_update_context_strategy_prompt_key.sql  002_add_superseded_by.sql  002_create_initial_schema.sql  002_insert_initial_prompt_templates.sql  002_metadata_tables.sql  002_procedural_and_audits.sql  003_add_openrouter_telemetry.sql  003_add_prompt_audits.sql  003_feedback.sql  003_seed_initial_data.sql  003_workflow_tables.sql  004_add_generation_metadata.sql  004_audit_and_feedback.sql  004_create_initial_schema.sql  005_add_dreaming_schema.sql  005_seed_initial_data.sql  006_add_openrouter_telemetry.sql  006_add_prompt_optimization_template.sql  006_context_persistence.sql  007_context_persistence.sql  007_restructure_proposal_metadata.sql  008_rename_context_config.sql  008_update_optimizer_triplets.sql  008_user_context_persistence.sql  009_add_rendered_optimization_prompt.sql  009_unique_semantic_triples.sql  010_add_context_archetypes.sql  010_graph_first_architecture.sql  010_memory_embeddings.sql  011_optimize_basic_response_with_graph.sql  011_sender_column.sql  012_extraction_infrastructure.sql  013_entity_normalization_template.sql  014_response_templates.sql  015_update_basic_response_template.sql  (+9 more)
scripts/prompts/: CONTEXTUAL_NUDGE.sql  CONTEXT_STRATEGY.sql  MEMORY_CONSOLIDATION.sql  MEMORY_REVIEW.sql  PROMPT_OPTIMIZATION.sql  README.md  THREAD_EDIT.sql  UNIFIED_RESPONSE.sql
tests/integration/: conftest.py  test_app_integration.py  test_context_strategy_pipeline.py  test_dreaming_workflow.py  test_end_to_end_message_flow.py  test_entity_and_semantic_memory_storage.py  test_entity_and_triple_storage.py  test_entity_extraction_pipeline.py  test_integration.py  test_memory_consolidation.py  test_message_flow.py  test_query_extraction_pipeline.py  test_triple_extraction.py
tests/unit/: test_adaptive.py  test_analyzer.py  test_approval.py  test_audit_mirror.py  test_auditing_middleware.py  test_batch_consolidation.py  test_bot.py  test_canonical.py  test_command_handler.py  test_config.py  test_context.py  test_context_strategy.py  test_database.py  test_date_resolution.py  test_dream.py  test_dreaming.py  test_dreaming_scheduler.py  test_entity_extraction.py  test_entity_resolution.py  test_episodic.py  test_error_handlers.py  test_error_manager.py  test_error_notifier.py  test_graph.py  test_handlers.py  test_health.py  test_json_parser.py  test_llm.py  test_llm_client.py  test_local_extraction.py  test_memory.py  test_memory_orchestrator.py  test_memory_parsing.py  test_memory_review.py  test_message_handler.py  test_nudges.py  test_objective_parsing.py  test_pipeline.py  test_placeholder_injector.py  test_placeholder_registry.py  (+14 more)
