[project]
name = "lattice"
version = "0.1.0"
description = "Adaptive Memory Orchestrator - A self-evolving Discord companion with ENGRAM neuro-symbolic memory"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.3.2,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "pgvector>=0.2.4,<1.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.1.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.23.2,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "commitizen>=3.13.0,<4.0.0",
    "bandit>=1.7.0,<2.0.0",
]

[build-system]
requires = ["hatchling>=1.21.0,<2.0.0"]
build-backend = "hatchling.build"

# ============================================================================
# RUFF CONFIGURATION - Ultra-fast linter & formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
]

ignore = [
    "COM812",
    "ISC001",
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN",
    "PLR2004",
    "SLF001",
    "S108",
]
"scripts/__init__.py" = [
    "D104",
]
"scripts/init_db.py" = [
    "T201",
    "PLR0915",
]
"lattice/utils/database.py" = [
    "ANN101",
]
"lattice/utils/embeddings.py" = [
    "ANN101",
]
"lattice/memory/*.py" = [
    "PLR0913",
    "ANN101",
]

[tool.bandit]
exclude = ["tests"]

[tool.bandit.skips]
B101 = ["tests/**/*.py"]
B108 = ["tests/**/*.py"]

[tool.ruff.lint.isort]
known-first-party = ["lattice"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# MYPY CONFIGURATION - Strict type checking
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-n",
    "auto",
    "--cov=lattice",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["lattice"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ============================================================================
# COMMITIZEN CONFIGURATION - Conventional commits
# ============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
