[project]
name = "lattice"
version = "0.1.0"
description = "Adaptive Memory Orchestrator - A self-evolving Discord companion with ENGRAM neuro-symbolic memory"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-cord>=2.7.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.1.0,<25.0.0",
    "openai>=1.0.0,<2.0.0",
    "pytz>=2024.1,<2025.0",
]



[project.optional-dependencies]
dev = [
    "ruff>=0.1.9,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.23.2,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "commitizen>=3.13.0,<4.0.0",
]

[build-system]
requires = ["hatchling>=1.21.0,<2.0.0"]
build-backend = "hatchling.build"

# ============================================================================
# RUFF CONFIGURATION - Ultra-fast linter & formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    "scripts/schema.sql",
    "scripts/migrations/*.sql",
    "scripts/prompts/*.sql",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
    "TID251",
]

ignore = [
    "COM812",
    "ISC001",
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN",
    "PLR2004",
    "SLF001",
    "S108",
    "PERF401",
    "I001",
]
"scripts/**/*.py" = [
    "T201",   # Allow print in scripts
]
"lattice/memory/*.py" = [
    "PLR0913",
    "ANN101",
    "ANN401",
    "PLC0415",
]
"lattice/utils/*.py" = [
    "PLC0415",
    "RET505",
    "ARG002",
    "PLW0603",
    "TRY300",
]
"lattice/__main__.py" = [
    "PLC0415",
]
"lattice/discord_client/*.py" = [
    "ANN101",
    "F401",
    "G004",
    "I001",
    "TC001",
    "PLR0913",  # Many arguments needed for Discord UI components
]

"lattice/scheduler/*.py" = [
    "ANN401",
    "DTZ003",
    "RUF012",
    "ARG002",
    "TRY300",
    "TRY003",
    "S608",
    "E501",
    "RUF006",
    "S311",
    "RET504",
    "EM102",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.getenv" = { msg = "Centralize environment variable access in config modules if possible." }
"os.environ" = { msg = "Centralize environment variable access in config modules if possible." }
"os.environ.get" = { msg = "Centralize environment variable access in config modules if possible." }
"datetime.datetime.now" = { msg = "Use lattice.utils.date_resolution.get_now() instead for consistent timezone handling." }
"datetime.datetime.utcnow" = { msg = "Use lattice.utils.date_resolution.get_now('UTC') instead." }
"lattice.utils.llm_client._LLMClient" = { msg = "Use AuditingLLMClient for all production LLM calls to ensure observability. Create via: AuditingLLMClient(_LLMClient())" }
"openai" = { msg = "Use lattice.utils.llm_client._LLMClient or AuditingLLMClient instead of importing openai directly." }
"asyncpg" = { msg = "Use lattice.utils.database.db_pool to acquire connections instead of importing asyncpg directly (except in utility/setup scripts)." }
"logging" = { msg = "Use structlog (from lattice.utils.llm_client or similar) for structured logging instead of the standard logging module." }
"print" = { msg = "Use structlog for all application logging. Use print only in CLI scripts." }

[tool.ruff.lint.isort]
known-first-party = ["lattice"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# MYPY CONFIGURATION - Strict type checking
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lattice.memory.*", "lattice.utils.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["lattice.discord_client.*", "lattice.dreaming.approval", "lattice.dreaming.proposer"]
# Discord Components V2 API (py-cord 2.7+) not yet in stable release/typestubs
ignore_errors = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-n",
    "auto",
    "--cov=lattice",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: marks tests as integration tests (require DATABASE_URL)",
]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["lattice"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ============================================================================
# BANDIT CONFIGURATION - Security linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests/"]
skips = ["B608"]

# ============================================================================
# COMMITIZEN CONFIGURATION - Conventional commits
# ============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
